--- a/backend/.env-example
+++ b/backend/.env-example
@@ -1,4 +1,7 @@
 export PORT = 5000
-export DATABASE_PATH = '/path/absoluto/'
-export DATABASE_NAME = 'course.db'
+export DATABASE_PATH = '/home/douglas/Programacion-I/backend'
+export DATABASE_NAME = 'tablas.db'
 export NAME_APP = Hi world
+
+export JWT_SECRET_KEY = 'clave-secreta-de-la-app'
+export JWT_ACCESS_TOKEN_EXPIRES = 3600
