Arreglos de jwt

--- a/backend/.env-example
+++ b/backend/.env-example
@@ -1,7 +1,10 @@
+#App port
 export PORT = 5000
+
+#Database configuration
 export DATABASE_PATH = '/home/douglas/Programacion-I/backend'
 export DATABASE_NAME = 'tablas.db'
-export NAME_APP = Hi world
 
+#JWT configuration
 export JWT_SECRET_KEY = 'clave-secreta-de-la-app'
 export JWT_ACCESS_TOKEN_EXPIRES = 3600
