--- a/backend/.env-example
+++ b/backend/.env-example
@@ -3,7 +3,7 @@ export PORT = 5000
 
 #Database configuration
 export DATABASE_PATH = '/home/douglas/Programacion-I/backend'
-export DATABASE_NAME = 'tablas.db'
+export DATABASE_NAME = 'database.db'
 
 #JWT configuration
 export JWT_SECRET_KEY = 'clave-secreta-de-la-app'
@@ -15,6 +15,6 @@ export MAIL_SERVER = 'smtp.gmail.com'
 export MAIL_PORT = '587'
 export MAIL_USE_TLS = 'True'
 export MAIL_USERNAME = 'name@mail.com'
-export MAIL_PASSWORD = 'dmmuggtqzwrtzfxr'
+export MAIL_PASSWORD = 'password mail'
 #Mail FROM name
 export FLASKY_MAIL_SENDER = 'App Name Admin <admin@appname.com>'
